Recent button styling added

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../assets/css/global.css">
+     <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRISKEYTzcxUJHCzF3zLuf1WUb8Mk5sLjTj4Q&s" type="image/x-icon">
 
     <script src="../assets/js/global.js"></script>
 </head>
@@ -23,9 +24,9 @@
                     <button class="btn">Login</button>
                     <button class="btn">SignUp</button>
                </div>
-
-
             </div>
+
+
             <form action="" method="post" class="form">
 
                     <div class="label_input">
@@ -46,19 +47,23 @@
                         <label class="label password" for="">Password*</label>
                         <div class="fullname_Input">
                         <img src="../assets/images/password.svg" alt="" class="icons">
-                        <input type="password" placeholder="...." id="password" class="inputs" required>
+                        <input type="password" placeholder="...." id="password" class="inputs">
                         
                     </div>  
                     <p>Password must be at least 6 characters long</p>  
             </form>
 
 
-             <div class="button_section_parent">
-                <div class="button_section">
-                    <button class="btn">Login</button>
-                    <button class="btn">SignUp</button>
-            </div>
 
+             <div class="help_Create_button_section">
+                <button class="botton help_button">
+                  <i class="fa-solid fa-circle-info font-icon"></i>
+                  <span>Help?</span>
+                </button>
+                <button class="botton create_botton">Create Account</button>
+
+             </div>
+             
             <p class="policy"> By continuing, you gree to our <a href="#">Terms of Service</a> Privacy Policy</p>
             <p class="copyright">&copy; 2024 TaskMaster | Made for University Students </p>
 
