task page created

--- a/modules/signup/signup.html
+++ b/modules/signup/signup.html
@@ -4,20 +4,19 @@
 
 <!-- <button data-import="../components/button/button.html">Login</button> -->
 <section class="signup_Display login_Display">
-    <img class="signup_Display_Image" src="../assets/images/login image.svg" alt="">
+    <img class="signup_Display_Image" src="../../assets/images/login image.svg" alt="">
 
     <div class="signup_Text" id="signup_Text">
         <h4 class="signup_Text_Heading">Join TaskMaster</h4>
         <p class="signup_Text_Create">Create an account to boost your creativity</p>
     </div>
 
-    <div class="button_Section_Parent">
+    
         <div class="button_Section_Child">
-            <!-- <button class="button_Section login_Button" id="login_Button">Login</button> -->
              <button class="button_Section login_Button" id="login_Button"data-import="../components/button/button.html">Login</class=>
             <button class="button_Section signup_Button" id="signup_Button">SignUp</button>
         </div>
-    </div>
+    
 
     <form action="" class="form_Section">
         <div class="label_Input">
