Added the funtionality of the A.I_Summary button

--- a/modules/signup/signup.html
+++ b/modules/signup/signup.html
@@ -2,7 +2,9 @@
 
 
 
-<!-- <button data-import="../components/button/button.html">Login</button> -->
+<main class="main_Animation">
+
+
 <section class="signup_Display login_Display">
     <img class="signup_Display_Image" src="../../assets/images/login image.svg" alt="">
 
@@ -22,21 +24,21 @@
         <div class="label_Input">
             <label class="label_Fullname fullname_Label" for="">Full Name*</label>
             <div class="fullname_Input">
-                <img src="../assets/images/person.svg" alt="" class="icons">
+                <img src="../../assets/images/person.svg" alt="" class="icons">
                 <input type="text" placeholder="John Doe" id="fullname" class="inputs_Value">
             </div>
 
             <div class="label_input">
                 <label class="label Email" for="">Email Address*</label>
                 <div class="fullname_Input">
-                    <img src="../assets/images/message.svg" alt="" class="input_Icons">
+                    <img src="../../assets/images/message.svg" alt="" class="input_Icons">
                     <input type="text" placeholder="hello@example.com" id="Email Address" class="inputs_Value">
                 </div>
 
                 <div class="label_input">
                     <label class="label password" for="">Password*</label>
                     <div class="fullname_Input">
-                        <img src="../assets/images/password.svg" alt="" class="input_Icons">
+                        <img src="../../assets/images/password.svg" alt="" class="input_Icons">
                         <input type="password" placeholder="...." id="password" class="inputs_Value">
 
                     </div>
@@ -58,4 +60,6 @@
             Policy</a> </p>
     <p class="copyright_Paragraph">&copy; 2024 TaskMaster | Made for University Students </p>
 
-</section>  -->
+</section>
+
+</main>
