Add my functionality to my task button

--- a/modules/task/task.html
+++ b/modules/task/task.html
@@ -134,7 +134,7 @@
                     </div>
                 </div>
 
-                <!-- <div class="task_Window_Modal">
+                <div class="task_Window_Modal">
                     <div class="task_Modal_Create">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
                             <g fill="none">
@@ -204,7 +204,7 @@
                         <button class="create_Task_Button">Create Task</button>
                     </div>
 
-                </div> -->
+                </div>
 
 
                <!-- <section class="ai_Session">
